--- a/web/include/scene/menu/sprite/sprite_menu.html
+++ b/web/include/scene/menu/sprite/sprite_menu.html
@@ -45,6 +45,57 @@
           action="v => update_sprite_details('h', parseInt(v))"
         )
       }}
+      {{
+        editable_input(
+          id="sprite_menu_r",
+          label="R",
+          type="number",
+          min=0,
+          max=255,
+          noend=1,
+          small=1,
+          action="() => update_sprite_colour()",
+          startclass="mt-1"
+        )
+      }}
+      {{
+        editable_input(
+          id="sprite_menu_g",
+          label="G",
+          type="number",
+          min=0,
+          max=255,
+          nostart=1,
+          noend=1,
+          small=1,
+          action="() => update_sprite_colour()"
+        )
+      }}
+      {{
+        editable_input(
+          id="sprite_menu_b",
+          label="B",
+          type="number",
+          min=0,
+          max=255,
+          nostart=1,
+          noend=1,
+          small=1,
+          action="() => update_sprite_colour()"
+        )
+      }}
+      {{
+        editable_input(
+          id="sprite_menu_a",
+          label="A",
+          type="number",
+          min=0,
+          max=255,
+          nostart=1,
+          small=1,
+          action="() => update_sprite_colour()"
+        )
+      }}
       <div class="input-group mt-1">
         {{ dropdown_button(label="Shape", small=1) }}
         <ul class="dropdown-menu">
@@ -57,7 +108,18 @@
   )
 }}
 <script>
-function update_sprite_details(dimension, value) {
+function update_sprite_colour(colour, value) {
+    update_sprite_details(
+        "colour",
+        ["r", "g", "b", "a"].map(
+            key => parseInt(
+                document.getElementById("sprite_menu_" + key).value
+            ) / 255
+        )
+    );
+}
+
+function update_sprite_details(property, value) {
     let id = parseInt(
         document
             .getElementById("sprite_menu_heading")
@@ -65,7 +127,7 @@ function update_sprite_details(dimension, value) {
     );
 
     let obj = {};
-    obj[dimension] = value;
+    obj[property] = value;
     RustFuncs.sprite_details(id, JSON.stringify(obj));
 }
 
@@ -75,7 +137,15 @@ function set_selected_sprite(sprite_json) {
         .getElementById("sprite_menu_heading")
         .setAttribute("{{ constant(DATA_ID_ATTR) }}", sprite.id);
 
-    ["x", "y", "w", "h"].forEach(
+    let colour = sprite?.colour;
+    let colour_keys = ["r", "g", "b", "a"];
+    for (let i = 0; i < 4; i++) {
+        sprite[colour_keys[i]] = (
+            colour ? (colour[i] * 255).toFixed(0) : undefined
+        );
+    }
+
+    ["x", "y", "w", "h"].concat(colour_keys).forEach(
         d => {
             let input = document.getElementById("sprite_menu_" + d);
             let v = sprite[d];
