--- a/web/include/scene/menu/sprite/sprite_menu.html
+++ b/web/include/scene/menu/sprite/sprite_menu.html
@@ -47,55 +47,11 @@
       }}
       <div id="sprite_menu_colour" class="mt-1">
         {{
-          editable_input(
-            id="sprite_menu_r",
-            label="R",
-            type="number",
-            min=0,
-            max=255,
-            noend=1,
-            small=1,
-            action="() => update_sprite_colour()",
+          colour_input(
+            id="sprite_menu_colour",
+            action="c => update_sprite_details('colour', c)"
           )
         }}
-        {{
-          editable_input(
-            id="sprite_menu_g",
-            label="G",
-            type="number",
-            min=0,
-            max=255,
-            nostart=1,
-            noend=1,
-            small=1,
-            action="() => update_sprite_colour()"
-          )
-        }}
-        {{
-          editable_input(
-            id="sprite_menu_b",
-            label="B",
-            type="number",
-            min=0,
-            max=255,
-            nostart=1,
-            noend=1,
-            small=1,
-            action="() => update_sprite_colour()"
-          )
-        }}
-        {{
-          editable_input(
-            id="sprite_menu_a",
-            label="A",
-            type="number",
-            min=0,
-            max=255,
-            nostart=1,
-            small=1,
-            action="() => update_sprite_colour()"
-          )
-        }}  
       </div>
       <div class="input-group mt-1">
         {{ dropdown_button(label="Shape", small=1) }}
@@ -109,17 +65,6 @@
   )
 }}
 <script>
-function update_sprite_colour(colour, value) {
-    update_sprite_details(
-        "colour",
-        ["r", "g", "b", "a"].map(
-            key => parseInt(
-                document.getElementById("sprite_menu_" + key).value
-            ) / 255
-        )
-    );
-}
-
 function update_sprite_details(property, value) {
     let id = parseInt(
         document
@@ -132,28 +77,37 @@ function update_sprite_details(property, value) {
     RustFuncs.sprite_details(id, JSON.stringify(obj));
 }
 
+function set_sprite_colour(colour) {
+    const id = "sprite_menu_colour";
+    const colour_menu = document.getElementById(id);
+    if (colour) {
+        colour_menu.style.display = "block";
+
+        let colour_hex = "#";
+        for (let i = 0; i < 3; i++) {
+            let v = Math.floor(colour[i] * 255);
+            colour_hex += v.toString(16).padStart(2, "0");
+        }
+        document.getElementById(id + "_colour").value = colour_hex;
+
+        let alpha = colour[3];
+        document.getElementById(id + "_alpha").value =
+            Math.floor(alpha * 100);
+    }
+    else {
+        colour_menu.style.display = "none";
+    }
+
+}
+
 function set_selected_sprite(sprite_json) {
     let sprite = JSON.parse(sprite_json);
     document
         .getElementById("sprite_menu_heading")
         .setAttribute("{{ constant(DATA_ID_ATTR) }}", sprite.id);
 
-    let colour = sprite?.colour;
-    let colour_keys = ["r", "g", "b", "a"];
-    let colour_menu = document.getElementById("sprite_menu_colour");
-    if (colour) {
-        for (let i = 0; i < 4; i++) {
-            sprite[colour_keys[i]] = (
-                colour ? (colour[i] * 255).toFixed(0) : undefined
-            );
-        }
-        colour_menu.style.display = "block";
-    }
-    else {
-        colour_menu.style.display = "none";
-    }
-
-    ["x", "y", "w", "h"].concat(colour_keys).forEach(
+    set_sprite_colour(sprite?.colour);
+    ["x", "y", "w", "h"].forEach(
         d => {
             let input = document.getElementById("sprite_menu_" + d);
             let v = sprite[d];
