use IFDEF(... ELSE syntax, fix handling for multiline blocks

--- a/web/include/special/accordion_item.html
+++ b/web/include/special/accordion_item.html
@@ -9,7 +9,7 @@
       type="button"
       data-bs-toggle="collapse"
       data-bs-target="#{{ ID }}_collapse"
-      aria-expanded="IFDEF(EXPANDED) {{ true }}IFNDEF(EXPANDED) {{ false }}"
+      aria-expanded="IFDEF(EXPANDED) {{ true }} ELSE {{ false }}"
       aria-controls="{{ ID }}_collapse"
     >{{ LABEL }}</button> 
   </h2>
