--- a/web/include/special/header.html
+++ b/web/include/special/header.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand" href="/">{{ constant(APP_TITLE) }}</a>
       <div class="collapse navbar-collapse">
         <div class="navbar-nav">
-          <a class="nav-link" href="/login">Log in</a>
+          <a class="nav-link" href="/login">Log In</a>
           <a class="nav-link" href="/register">Register</a>
         </div>
       </div>
