--- a/web/include/common.css
+++ b/web/include/common.css
@@ -1,4 +1,4 @@
-/* For special/loading_icon.html */
+/* For loading_icon.html */
 .loading-icon > * {
     display: none;
 }
@@ -18,7 +18,17 @@
 .loading-idle > .loading-default-icon {
     display: block;
 }
-/* End special/loading_icon.html */
+/* End loading_icon.html */
+
+/* For status indicator icons (media/preview_card.html) */
+.status-indicator {
+    width: 1.25em;
+    height: 1.25em;
+    position: absolute;
+    top: 0.5em;
+    right: 0.5em;
+  }
+/* End preview_card.html */
 
 /* BS overrides */
 /* For buttons in btn-groups which are just disabled icons. */
