--- a/web/include/form/start.html
+++ b/web/include/form/start.html
@@ -1,10 +1,14 @@
+PREAMBLE {{
+kwargs["CLASS"] = kwargs.get("CLASS", "col-sm-4 pt-5")
+}}
+
 <div class="container-sm">
   <div class="row justify-content-center">
-    <div class="col-sm-4 pt-5">
+    <div class="{{ CLASS }}">
       IFDEF(TITLE) {{ <h2 class="pb-3">{{ TITLE }}</h2> }}
       <form
         class="needs-validation"
-        onsubmit="return false"
-        action="{{ ACTION }}"
+        onsubmit="return false;"
+        IFDEF(ACTION) {{ action="{{ ACTION }}" }}
         data-redirect="{{ REDIRECT }}"
       >
