--- a/web/include/common.css
+++ b/web/include/common.css
@@ -22,8 +22,8 @@
 
 /* For status indicator icons (media/preview_card.html) */
 .status-indicator {
-    width: 1.25em;
-    height: 1.25em;
+    width: 2em;
+    height: 2em;
     position: absolute;
     top: 0.5em;
     right: 0.5em;
@@ -38,10 +38,8 @@
     opacity: 1 !important;
 }
 
-/* Make icons a little larger and align them better with text. */
+/* Align icons a little better with text. */
 .bi {
-    width: 1.25em;
-    height: 1.25em;
     transform: translateY(-0.1em);
 }
 
@@ -52,6 +50,11 @@
 
 .input-group-sm input[type='color'] {
     height: 31px;
+}
+
+/* Add a gap between tabbed nav items */
+.nav-item {
+    padding-left: 0.5rem;
 }
 
 /* End BS overrides */
